--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,10 @@
 .App {
   max-width: 600px;
+  min-width: 500px;
   margin: 30px auto;
 }
 .Container {
+  
   padding: 20px;
   border: 1px solid #dadde1;
   border-radius: 5px;
